--- a/.gitignore
+++ b/.gitignore
@@ -303,8 +303,11 @@ __pycache__/
 
 # OpenCover UI analysis results
 OpenCover/
-/RealDox.Core/src/RealDox.Core/bin
-/RealDox.Core/src/RealDox.Core/obj
+/RealDox.Core/src/RealDox.Core/bin/*
+/RealDox.Core/src/RealDox.Core/obj/*
+
+/RealDox.Api/src/RealDox.Api/bin/*
+/RealDox.Api/src/RealDox.Api/obj/*
 
 .vscode/*
 !.vscode/settings.json
