Todo: fix ignore files

--- a/RealDox.Api/.gitignore
+++ b/RealDox.Api/.gitignore
@@ -309,3 +309,6 @@ OpenCover/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+./src/RealDox.Api/bin/*
+./src/RealDox.Api/obj/
